# homelab

./: .envrc  .gitignore  Cargo.toml  Pulumi.prod.yaml  Pulumi.yaml  README.md  deploy.yml  docker-compose.yml  flake.nix  go.work  go.work.sum  index.ts  justfile  nomad.hcl  package-lock.json  package.json  shell.nix  todo.md  v2_plan.md
apps/: compose.yml
apps/glance/: service.hcl
apps/homeassistant/: .gitignore  compose.in.yml  compose.yml  service.json
apps/jellyfin/: .gitignore  compose.in.yml  service.hcl  service.in.json
apps/maybe/: compose.disable.yml
bootstrap/: Cargo.toml
bootstrap/src/: bootstrap.rs  main.rs
config/: go.mod  go.sum  main.go
crds/: metallb.io_ipaddresspools.yaml  metallb.io_l2advertisements.yaml
dozzle/: compose.yml
grafana/: .gitignore  compose.yml
homeassistant/: .gitignore
hydra/: Cargo.toml
hydra/src/: args.rs  logging.rs  main.rs
inventory/: dev_docker_swarm.yml  localhost.yml
jellyfin/: .gitignore  compose.yml
lookup_plugins/: service_domain.py
manager/: Cargo.toml
manager/src/: args.rs  bootstrap.rs  cloudflare.rs  config.rs  configure.rs  logging.rs  main.rs  nginx.rs  pihole.rs  port_cache.rs  service.rs  template.rs  token_cache.rs  tunnel.rs
manager/src/configure/: mod.rs
manager/src/deploy/: mod.rs
reactive-resume/: compose.yml
roles/authelia/files/: .gitignore
roles/authelia/tasks/: main.yml
roles/authelia/templates/: configuration.yml.j2  docker-compose.yml.j2
roles/autheliafiles/credentials/: client_secret.txt
roles/bitmagnet/tasks/: main.yml
roles/bitmagnet/templates/: docker-compose.yml.j2
roles/cfzt-sync/defaults/: main.yml
roles/cfzt-sync/files/: debouncer.go  go.mod  go.sum  labels.go  main.go
roles/cfzt-sync/tasks/: main.yml
roles/cfzt-sync/templates/: docker-compose.yml.j2
roles/cloudflared/defaults/: main.yml
roles/cloudflared/files/: Dockerfile
roles/cloudflared/tasks/: main.yml
roles/cloudflared/templates/: docker-compose.yml.j2
roles/decluttarr/tasks/: main.yml
services/: compose.yml  config.ts  index.ts  util.ts
services/apps/: glance.ts  glance.yml  index.ts
services/cloudflared/: compose.in.yml
services/crds/: package.json  tsconfig.json
services/nginx/: .gitignore  compose.in.yml  compose.yml  nginx.conf  service.json
services/pihole/: .gitignore  compose.in.yml  service.hcl  service.in.json
services/support/: index.ts  open_ldap.ts
services/system/: cert_manager.ts  cloudflare.ts  cloudflared.ts  coredns.ts  external_dns.ts  index.ts  kube_vip.ts  kube_vip_cloud_provider.ts  metallb.ts  pihole.ts  traefik.ts
services/traefik/: service.hcl
stacks/dozzle/: docker-compose.yml
stacks/portainer/: docker-compose.yml
tools/: compose.yml
tools/dozzle/: .gitignore  compose.in.yml  service.in.json
tools/grafana/: .gitignore  compose.in.yml  compose.yml  service.in.json
(+97 files in other folders)
