[package]
name = "homelab"
version = "0.1.0"
description = "Tool for bootstrapping and managing the homelab"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5", default-features = true, features = [
  "derive",
  "cargo",
  "env",
  "wrap_help",
] }
ignore = "0.4"
regex = "1.10"
users = { version = "0.11", default-features = false }
