[package]
name = "hydra"
version = "0.1.0"
description = "Tool for managing a homelab"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", default-features = true, features = [
  "derive",
  "cargo",
  "env",
  "wrap_help",
] }
console = "0.15"
log = { version = "0.4", features = ["std"] }
