[package]
name = "homelab-manager"
version = "0.1.0"
description = "Tool for bootstrapping and managing the homelab"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4.5", default-features = true, features = [
  "derive",
  "cargo",
  "env",
  "wrap_help",
] }
console = "0.15"
dialoguer = "0.11"
log = { version = "0.4", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "charset",
  "blocking",
  "rustls-tls",
] }
serde = { version = "1.0", default-features = true, features = [
  "derive",
  "alloc",
] }
serde_json = "1.0"
users = { version = "0.11", default-features = false }
