[package]
name = "homelab-manager"
version = "0.1.0"
description = "Tool for bootstrapping and managing the homelab"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", default-features = true, features = [
  "derive",
  "cargo",
  "env",
  "wrap_help",
] }
console = "0.15"
dialoguer = "0.11"
glob = "0.3"
log = { version = "0.4", features = ["std"] }
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = [
  "http2",
  "charset",
  "blocking",
  "rustls-tls",
] }
semver = "1.0"
serde = { version = "1.0", default-features = true, features = [
  "derive",
  "alloc",
] }
serde_json = "1.0"
users = { version = "0.11", default-features = false }
